headings and formats change

--- a/src/WebApp/Pages/Notesheets/Create.cshtml
+++ b/src/WebApp/Pages/Notesheets/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Create";
 }
 <div class="container">
-    <h1>Create Notesheet</h1>
+    <h1>Create Contract Proposal</h1>
     <hr />
     <div class="row">
         <div class="col-md-8">
@@ -195,7 +195,7 @@
                     <span asp-validation-for="Notesheet.ApprovingAuthority" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create Notesheet" class="btn btn-primary" />
+                    <input type="submit" value="Create Proposal" class="btn btn-primary" />
                 </div>
             </form>
         </div>
