--- a/src/WebApp/Pages/Notesheets/Details.cshtml
+++ b/src/WebApp/Pages/Notesheets/Details.cshtml
@@ -3,7 +3,7 @@
 @using Core.Entities
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Proposal Details";
 }
 <div class="container">
     <div>
