--- a/src/WebApp/Pages/Notesheets/Edit.cshtml
+++ b/src/WebApp/Pages/Notesheets/Edit.cshtml
@@ -2,7 +2,7 @@
 @model WebApp.Pages.Notesheets.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Proposal";
 }
 <div class="container">
     <h1>Edit Notesheet</h1>
@@ -190,7 +190,7 @@
                 </div>
                 <input type="hidden" asp-for="Notesheet.Id" />
                 <div class="form-group">
-                    <input type="submit" value="Save Notesheet" class="btn btn-primary" />
+                    <input type="submit" value="Update Proposal" class="btn btn-primary" />
                 </div>
             </form>
         </div>
