--- a/src/WebApp/Pages/Notesheets/Index.cshtml
+++ b/src/WebApp/Pages/Notesheets/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model WebApp.Pages.Notesheets.IndexModel
 
-@{ ViewData["Title"] = "Notesheets"; }
+@{ ViewData["Title"] = "Contract Proposals"; }
 
 
 
