--- a/src/WebApp/Pages/Notesheets/Delete.cshtml
+++ b/src/WebApp/Pages/Notesheets/Delete.cshtml
@@ -2,11 +2,11 @@
 @model WebApp.Pages.Notesheets.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Proposal";
 }
 
 <div class="container">
-    <h3>Are you sure you want to delete this Notesheet?</h3>
+    <h3>Are you sure you want to delete this Contract Proposal ?</h3>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
