--- a/src/WebApp/Pages/Index.cshtml
+++ b/src/WebApp/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center">
     <h1 class="display-4">Welcome to Contracts Management Application</h1>
     <br />
-    <h3><a asp-page="/Notesheets/Index">View Notsheets</a></h3>
+    <h3><a asp-page="/Notesheets/Index">View Contract Proposals</a></h3>
     <br />
-    <h3><a asp-page="/Notesheets/Create">Create Notsheet</a></h3>
+    <h3><a asp-page="/Notesheets/Create">Create Contract Proposal</a></h3>
 </div>
