--- a/src/WebApp/Pages/Shared/_AuthorizedPartial.cshtml
+++ b/src/WebApp/Pages/Shared/_AuthorizedPartial.cshtml
@@ -18,7 +18,7 @@
                 <a class="dropdown-item" asp-page="/Users/Index">Users</a>
                 <a class="dropdown-item" asp-page="/Departments/Index">Departments</a>
                 <a class="dropdown-item" asp-page="/Designations/Index">Designations</a>
-                <a class="dropdown-item" asp-page="/Notesheets/Index">Notesheets</a>
+                <a class="dropdown-item" asp-page="/Notesheets/Index">Proposals</a>
             </div>
         </li>
     }
@@ -26,6 +26,6 @@
         <a class="nav-link text-light" asp-page="/Users/Details">My Details</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-light" asp-page="/Notesheets/Index">Notesheets</a>
+        <a class="nav-link text-light" asp-page="/Notesheets/Index">Proposals</a>
     </li>
 }
