--- a/src/WebApp/Pages/Notesheets/Details.cshtml
+++ b/src/WebApp/Pages/Notesheets/Details.cshtml
@@ -58,7 +58,7 @@
                     <span>@Html.DisplayFor(model => model.Notesheet.Type)</span>
                 </p>
 
-                <span class="sectionHeading">Description</span>
+                <span class="sectionHeading">Brief description of work/item to be procured</span>
                 <p>
                     <span>@Html.DisplayFor(model => model.Notesheet.Description)</span>
                 </p>
@@ -87,7 +87,7 @@
 
                     <p class="leftMargin1cm"><b>c. Validity: </b>@Html.DisplayFor(model => model.Notesheet.BudgetOfferValidity)</p>
 
-                    <p class="leftMargin1cm"><b>d. Address</b></p>
+                    <p class="leftMargin1cm"><b>d. Name/Address of agency who submitted Budgetary Offer:</b></p>
                     <p class="leftMargin1cm">
                         @Html.DisplayFor(model => model.Notesheet.BudgetOfferAddress)
                     </p>
@@ -106,6 +106,11 @@
                 <span class="sectionHeading">Payment terms & CPG</span>
                 <p>
                     <span>@Html.DisplayFor(model => model.Notesheet.Payment_Terms_CPG)</span>
+                </p>
+
+                <span class="sectionHeading">CPG</span>
+                <p>
+                    <span>@Html.DisplayFor(model => model.Notesheet.CPG)</span>
                 </p>
 
                 <span class="sectionHeading">Mode of Tender preferred</span>
@@ -186,15 +191,17 @@
                     }
                 </div>
 
+                <span class="sectionHeading">DOP Section No.:</span>
+                <p>
+                    <span> @Html.DisplayFor(model => model.Notesheet.DopSection)</span>
+                </p>
+
+
                 <span class="sectionHeading">DOP Clause No.:</span>
                 <p>
                     <span> @Html.DisplayFor(model => model.Notesheet.DopClause)</span>
                 </p>
 
-                <span class="sectionHeading">DOP Section No.:</span>
-                <p>
-                    <span> @Html.DisplayFor(model => model.Notesheet.DopSection)</span>
-                </p>
 
                 <span class="sectionHeading">Competent Authority for granting approval:</span>
                 <p>
